@@ -16,8 +16,6 @@ option_list <- list(
         help = "Input: PureCN output RDS file, used to regenerate plots and files after manual curation"),
     make_option(c("--mappingbiasfile"), action = "store", type = "character", default = NULL,
         help = "Input: Mapping bias RDS file, generated by NormalDB.R (or calculateMappingBiasVcf)"),
-    make_option(c("--normal_panel"), action = "store", type = "character", default = NULL,
-        help = "Input: Deprecated, use --mappingbiasfile instead"),
     make_option(c("--normaldb"), action = "store", type = "character", default = NULL,
         help = "Input: NormalDB.rds file. Generated by NormalDB.R."),
     make_option(c("--segfile"), action = "store", type = "character",
@@ -144,13 +142,7 @@ if (!is.null(opt$seed)) {
     set.seed(opt$seed)
 }
 
-# TODO: remove in 1.20, defunct in 1.18
-if (!is.null(opt$normal_panel) && is.null(opt$mappingbiasfile)) {
-    flog.warn("--normal_panel is deprecated, use --mappingbiasfile instead.")
-    opt$mappingbiasfile <- opt$normal_panel
-}
-
-tumor.coverage.file <- opt$tumor
+tumor.coverage.file <- opt[["tumor"]]
 normal.coverage.file <- opt[["normal"]]
 snp.blacklist <- opt$snpblacklist
 
@@ -208,7 +200,6 @@ if (Sys.getenv("PURECN_DEBUG") != "") {
     files
 }
 
-
 ### Run PureCN ----------------------------------------------------------------
 
 if (file.exists(file.rds) && !opt$force) {
@@ -221,7 +212,7 @@ if (file.exists(file.rds) && !opt$force) {
         normalDB <- readRDS(opt$normaldb)
         if (!is.null(normal.coverage.file)) {
             flog.warn("Both --normal and --normalDB provided. normalDB will NOT be used for coverage denoising. You probably do not want this.")
-        }    
+        }
     }
 
     .getNormalCoverage <- function(normal.coverage.file) {
@@ -248,7 +239,7 @@ if (file.exists(file.rds) && !opt$force) {
         if (grepl(".list$", opt$additionaltumors)) {
             additional.tumors <- .checkFileList(opt$additionaltumors)
         } else {
-            additional.tumors <- opt$additionaltumors 
+            additional.tumors <- opt$additionaltumors
         }
         multi.seg <- processMultipleSamples(
             c(list(tumor.coverage.file), as.list(additional.tumors)),
@@ -256,18 +247,18 @@ if (file.exists(file.rds) && !opt$force) {
                 seq_along(additional.tumors) + 1, sep = "_")),
             normalDB = normalDB, genome = opt$genome, verbose = debug)
         write.table(multi.seg, seg.file, row.names = FALSE, sep = "\t")
-    }    
+    }
     af.range <- c(opt$minaf, 1 - opt$minaf)
     test.purity <- seq(opt$minpurity, opt$maxpurity, by = 0.01)
 
     uses.recommended.fun <- FALSE
     recommended.fun <- "Hclust"
-    if (is.null(seg.file)) { 
+    if (is.null(seg.file)) {
         if (!is.null(opt$vcf)) {
             recommended.fun <- "PSCBS"
         } else {
             recommended.fun <- "CBS"
-        }    
+        }
     }
     fun.segmentation <- segmentationCBS
     if (opt$funsegmentation != "CBS") {
@@ -296,7 +287,7 @@ if (file.exists(file.rds) && !opt$force) {
     if (opt$error < formals(PureCN::runAbsoluteCN)$error && !is.null(opt$statsfile)) {
         flog.info("Low specified error, will keep fstar_tumor_lod flagged variants")
         mutect.ignore <- mutect.ignore[-match("fstar_tumor_lod", mutect.ignore)]
-    }    
+    }
     if (!is.null(opt$cores) && opt$cores > 1) {
         suppressPackageStartupMessages(library(BiocParallel))
         BPPARAM <- MulticoreParam(workers = opt$cores)
@@ -304,7 +295,7 @@ if (file.exists(file.rds) && !opt$force) {
     } else if (opt$parallel) {
         suppressPackageStartupMessages(library(BiocParallel))
         BPPARAM <- bpparam()
-        flog.info("Using default BiocParallel backend. You can change the default in your ~/.Rprofile file.") 
+        flog.info("Using default BiocParallel backend. You can change the default in your ~/.Rprofile file.")
     }
     if (!is.null(log.ratio)) {
         flog.info("Reading %s...", log.ratio)
@@ -317,19 +308,19 @@ if (file.exists(file.rds) && !opt$force) {
             tumor.coverage.file <- subsetByOverlaps(tumor.coverage.file, log.ratio)
         }
         log.ratio <- log.ratio$log.ratio
-    }    
+    }
     vcf <- opt$vcf
     if (!is.null(vcf) && tools::file_ext(vcf) == "tsv") {
         flog.info("*.tsv file provided for --vcf, assuming GATK4 CollectAllelicCounts format")
         vcf <- readAllelicCountsFile(vcf)
-    }    
+    }
     args.segmentation <- list(
         alpha = opt$alpha, undo.SD = opt$undosd,
         additional.cmd.args = opt$additionalcmdargs
     )
     if (opt$funsegmentation == "GATK4" && !is.null(opt$changepointspenalty)) {
         args.segmentation$changepoint.penalty <- opt$changepointspenalty
-    }    
+    }
     ret <- runAbsoluteCN(normal.coverage.file = normal.coverage.file,
             tumor.coverage.file = tumor.coverage.file, vcf.file = vcf,
             sampleid = sampleid, plot.cnv = TRUE,
@@ -345,7 +336,7 @@ if (file.exists(file.rds) && !opt$force) {
                 interval.padding = opt$padding),
             args.filterIntervals = list(
                 min.total.counts = opt$mintotalcounts,
-                 min.fraction.offtarget = opt$minfractionofftarget
+                min.fraction.offtarget = opt$minfractionofftarget
             ),
             fun.segmentation = fun.segmentation,
             args.segmentation = args.segmentation,
@@ -357,11 +348,11 @@ if (file.exists(file.rds) && !opt$force) {
             model = opt[["model"]], log.file = file.log,
             max.segments = opt$maxsegments,
             min.logr.sdev = opt$minlogrsdev,
-            error = opt$error, DB.info.flag = opt$dbinfoflag, 
+            error = opt$error, DB.info.flag = opt$dbinfoflag,
             POPAF.info.field = opt$popafinfofield,
             log.ratio.calibration = opt$logratiocalibration,
             max.non.clonal = opt$maxnonclonal,
-            max.homozygous.loss = as.numeric(strsplit(opt$maxhomozygousloss,",")[[1]]),
+            max.homozygous.loss = as.numeric(strsplit(opt$maxhomozygousloss, ",")[[1]]),
             post.optimize = opt$postoptimize,
             speedup.heuristics = opt$speedupheuristics,
             vcf.field.prefix = "PureCN.",
@@ -370,7 +361,7 @@ if (file.exists(file.rds) && !opt$force) {
     vcf <- NULL
     invisible(dev.off())
     if (opt$bootstrapn > 0) {
-        ret <- bootstrapResults(ret, n = opt$bootstrapn) 
+        ret <- bootstrapResults(ret, n = opt$bootstrapn)
     }
     saveRDS(ret, file = file.rds)
 }
@@ -419,7 +410,7 @@ if (is(ret$results[[1]]$gene.calls, "data.frame")) {
             write.csv(cbind(Sampleid = sampleid, gene.symbol = rownames(allAmplifications),
                 allAmplifications), row.names = FALSE, file = file.amps, quote = FALSE)
         }
-    }    
+    }
 } else {
     flog.warn("--intervals does not contain gene symbols. Not generating gene-level calls.")
 }
